--- a/public/app/home/templates/modalCreateGame.html
+++ b/public/app/home/templates/modalCreateGame.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label for="create-game-color" class="col-sm-2 control-label">{{ text.color }}</label>
                     <div class="col-sm-8">
-                        <select ng-model="createGame.color" id="create-game-color" class="form-control">
+                        <select ng-model="game.color" id="create-game-color" class="form-control">
                             <option ng-repeat="color in paramsGame.colors" value="{{ color }}">{{ text[color] }}</option>
                         </select>
                     </div>
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label for="create-game-time" class="col-sm-2 control-label">{{ text.time }}</label>
                     <div class="col-sm-8">
-                        <select ng-model="createGame.time" id="create-game-time" class="form-control">
+                        <select ng-model="game.time" id="create-game-time" class="form-control">
                             <option ng-repeat="time in paramsGame.times" value="{{ time }}">{{ time / 60 }} {{ text.minutes }}</option>
                         </select>
                     </div>
@@ -28,13 +28,13 @@
                 <div class="form-group">
                     <label for="create-game-points-min" class="col-sm-2 control-label">{{ text.points }}</label>
                     <div class="col-sm-4">
-                        <select ng-model="createGame.pointsMin" id="create-game-points-min" class="form-control">
+                        <select ng-model="game.pointsMin" id="create-game-points-min" class="form-control">
                             <option value="0">{{ text.min }}</option>
                             <option ng-repeat="pointsMin in paramsGame.pointsMin" value="{{ pointsMin }}">{{ pointsMin }}</option>
                         </select>
                     </div>
                     <div class="col-sm-4">
-                        <select ng-model="createGame.pointsMax" id="create-game-points-max" class="form-control">
+                        <select ng-model="game.pointsMax" id="create-game-points-max" class="form-control">
                             <option value="0">{{ text.max }}</option>
                             <option ng-repeat="pointsMax in paramsGame.pointsMax" value="{{ pointsMax }}">{{ pointsMax }}</option>
                         </select>
@@ -44,7 +44,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">{{ text.cancel }}</button>
-            <button type="button" class="btn btn-primary">{{ text.create_game }}</button>
+            <button ng-click="createGame()" type="button" class="btn btn-primary" data-dismiss="modal">{{ text.create_game }}</button>
         </div>
     </div>
 </div>
