--- a/public/css/icomoon.css
+++ b/public/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?7qv7o3');
-	src:url('fonts/icomoon.eot?#iefix7qv7o3') format('embedded-opentype'),
-		url('fonts/icomoon.woff?7qv7o3') format('woff'),
-		url('fonts/icomoon.ttf?7qv7o3') format('truetype'),
-		url('fonts/icomoon.svg?7qv7o3#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?avbotj');
+	src:url('fonts/icomoon.eot?#iefixavbotj') format('embedded-opentype'),
+		url('fonts/icomoon.woff?avbotj') format('woff'),
+		url('fonts/icomoon.ttf?avbotj') format('truetype'),
+		url('fonts/icomoon.svg?avbotj#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -38,8 +38,14 @@
 .icon-points:before {
 	content: "\e21f";
 }
+.icon-reset:before {
+	content: "\e364";
+}
 .icon-close:before {
 	content: "\e36b";
+}
+.icon-valid:before {
+	content: "\e370";
 }
 .icon-arrow-down:before {
 	content: "\e3b2";
@@ -52,4 +58,7 @@
 }
 .icon-sort-down:before {
 	content: "\e3b6";
+}
+.icon-filter:before {
+	content: "\e445";
 }
