--- a/public/app/home/templates/dropdown-filter-game.html
+++ b/public/app/home/templates/dropdown-filter-game.html
@@ -1,4 +1,4 @@
-<button ng-click="dropdownToggle()" 
+<button ng-click="dropdownFilterGameToggle()" 
         ng-class="{'btn-danger': hasFiltersGame(), 'btn-default': !hasFiltersGame()}"
         type="button" class="btn btn-xs">
     <span class="icon icon-filter"></span>
@@ -36,10 +36,10 @@
         </div>
     </div>
     <div class="pull-right">
-        <button ng-click="dropdownToggle()" class="btn btn-xs btn-success">
+        <button ng-click="dropdownFilterGameToggle()" class="btn btn-xs btn-success">
             <span class="icon icon-white icon-valid"></span>
         </button>
-        <button ng-click="resetSearchGame()" class="btn btn-xs btn-danger">
+        <button ng-click="resetSearchGame(); dropdownFilterGameToggle()" class="btn btn-xs btn-danger">
             <span class="icon icon-white icon-reset"></span>
         </button>
     </div>
