--- a/public/app/components/templates/col-right.html
+++ b/public/app/components/templates/col-right.html
@@ -1,5 +1,7 @@
-<div class="col-md-2 col-right">
-    <button class="element btn btn-default">
+<div class="col-right">
+    <button data-toggle="modal" 
+            data-target="#modal-shop"
+            class="element btn btn-default">
         <div>
             <span>{{ user.tokens }}</span>
             <span class="icon-king"></span>
@@ -14,7 +16,8 @@
             class="element btn btn-default">
         <span class="icon-right icon-home"></span>
     </button>
-    <button class="element btn btn-default">
+    <button location="ranking"
+            class="element btn btn-default">
         <span class="icon-right icon-ranking"></span>
     </button>
     <button class="element btn btn-default">
