--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,11 +103,13 @@ header #header iframe {
 .content .element {
     display: block;
     width: 100%;
+    height: 100%;
     border-radius: 3px;
     background: #fff;
 }
 
 .content .ranking {
+    position: relative;
     height: 536px;
     margin-bottom: 10px;
 }
@@ -317,7 +319,7 @@ footer .footer .link a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #fff;
 }
 
 .loading .loader {
