--- a/public/app/components/templates/modal-shop.html
+++ b/public/app/components/templates/modal-shop.html
@@ -25,7 +25,7 @@
                             </div>
                         </td>
                         <td class="buy">
-                            <button class="btn btn-primary">{{ token.price }}</button>
+                            <button ng-click="buy(token)" class="btn btn-primary">{{ token.price }}</button>
                         </td>
                     </tr>
                 </tbody>
