--- a/public/css/icomoon/style.css
+++ b/public/css/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?8w68js');
-	src:url('fonts/icomoon.eot?#iefix8w68js') format('embedded-opentype'),
-		url('fonts/icomoon.woff?8w68js') format('woff'),
-		url('fonts/icomoon.ttf?8w68js') format('truetype'),
-		url('fonts/icomoon.svg?8w68js#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?a196tv');
+	src:url('fonts/icomoon.eot?#iefixa196tv') format('embedded-opentype'),
+		url('fonts/icomoon.woff?a196tv') format('woff'),
+		url('fonts/icomoon.ttf?a196tv') format('truetype'),
+		url('fonts/icomoon.svg?a196tv#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -21,6 +21,10 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-bubble:before {
+	content: "\eac1";
 }
 
 .icon-home:before {
