--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-    background-color: #C8C8C8;
+    background-color: #E9EAED;
     font-size: 13px;
 }
 
@@ -64,11 +64,15 @@ a:hover, a:active, a:visited, a:focus {
     clear: both;
 }
 
+.element {
+    background: #fff;
+    border: 1px solid;
+    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+    -webkit-border-radius: 3px;
+}
+
 header {
-    background-color: #002D40;
     padding: 10px 0;
-    border-bottom: 3px solid #fff;
-    box-shadow: 0 0 5px #000;
 }
 
 header #header {
@@ -88,12 +92,12 @@ header #header iframe {
 }
 
 .app {
-    width: 750px;
+    width: 760px;
     margin: 0 auto;
 }
 
 .content {
-    margin: 20px 0;
+    margin: 10px 0 20px 0;
 }
 
 .content .element:nth-child(n+2) {
@@ -104,8 +108,6 @@ header #header iframe {
     display: block;
     width: 100%;
     height: 100%;
-    border-radius: 3px;
-    background: #fff;
 }
 
 .content .ranking {
@@ -421,9 +423,6 @@ footer {
     position: relative;
     width: 100%;
     height: 100%;
-    background: #595959;
-    border-top: 3px solid #fff;
-    border-bottom: 3px solid #fff;
 }
 
 footer .footer {
@@ -431,8 +430,6 @@ footer .footer {
     width: 760px;
     height: 300px;
     margin: 20px auto;
-    background: #fff;
-    border-radius: 5px;
 }
 
 footer .footer #pub {
