--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,7 @@ a:hover, a:active, a:visited, a:focus {
 }
 
 /*** Icomoon ***/
+
 [class^="icon-"], [class*=" icon-"] {
     font-size: 16px;
     color: #362F2D;
@@ -69,6 +70,11 @@ a:hover, a:active, a:visited, a:focus {
     border: 1px solid;
     border-color: #e5e6e9 #dfe0e4 #d0d1d5;
     -webkit-border-radius: 3px;
+}
+
+.profile-picture {
+    width: 50px;
+    height: 50px;
 }
 
 header {
