--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,7 @@ a:hover, a:active, a:visited, a:focus {
 .profile-picture {
     width: 50px;
     height: 50px;
+    border-radius: 3px;
 }
 
 header {
@@ -205,18 +206,14 @@ header #header iframe {
     height: 25px;
 }
 
-.content .profil {
+.content .profile {
     position: relative;
     padding: 10px;
     height: 70px;
 }
 
-.profil .img {
+.profile .img {
     padding-right: 10px;
-}
-
-.profil .img img {
-    border-radius: 3px;
 }
 
 .content .dropdown-filter {
@@ -228,8 +225,9 @@ header #header iframe {
     font-size: 12px;
 }
 
-.content table.list-user tr .img {
+.content table.list-user tr .profile-picture {
     width: 30px;
+    height: 30px;
 }
 
 .content table.list-user tr .name {
