--- a/public/css/style.css
+++ b/public/css/style.css
@@ -294,7 +294,7 @@ header #header iframe {
 
 /******* Game ********/
 
-.game .profile .time {
+.profile .time {
     text-align: center;
     font-size: 12px;
     background-color: #3A3A3A;
@@ -305,10 +305,57 @@ header #header iframe {
     border-radius: 5px;
 }
 
-.game .profile .time-turn {
+.profile .time-turn {
     margin-top: 5px;
 }
 
+.game > .game-row {
+    width: 100%;
+    height: 60px;
+}
+
+.game > .game-row > .game-box {
+    float: left;
+    width: 60px;
+    height: 100%;
+    padding: 14px;
+}
+
+.game-white {
+    background-color: #fff;
+}
+
+.game-white .game-row:nth-child(odd) .game-box:nth-child(even) {
+    background-color: #7D747A;
+}
+
+.game-white .game-row:nth-child(even) .game-box:nth-child(odd) {
+    background-color: #7D747A;
+}
+
+.game-black {
+    background-color: #7D747A;
+}
+
+.game-black .game-row:nth-child(odd) .game-box:nth-child(even) {
+    background-color: #fff;
+}
+
+.game-black .game-row:nth-child(even) .game-box:nth-child(odd) {
+    background-color: #fff;
+}
+
+.game-box .icon {
+    font-size: 32px;
+}
+
+.game-box .icon-white {
+    color: #E1B07E;
+}
+
+.game-box .icon-black {
+    color: #000;
+}
 /******* Trophies ********/
 
 .content .element.trophies {
