--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,15 @@ a:hover, a:active, a:visited, a:focus {
     text-decoration: none;
 }
 
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 /*** Bootstrap ***/
 
 .table {
