--- a/public/app/home/templates/modal-challenge.html
+++ b/public/app/home/templates/modal-challenge.html
@@ -5,9 +5,9 @@
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">{{ text.cancel }}</span>
             </button>
-            <div class="profil">
+            <div class="profile">
                 <div class="pull-left img">
-                    <img src="https://graph.facebook.com/{{ challenger.uid }}/picture">
+                    <img class="profile-picture" src="https://graph.facebook.com/{{ challenger.uid }}/picture">
                 </div>
                 <div>
                     <a href>{{ challenger.name }}</a>
